Fix to links to be compliant with current docusaurus beta requirements

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -25,12 +25,12 @@ SQL is straightforward to read but requires a bit of understanding to write. How
 
 There are four most important elements that you will be using in nearly every query in SFMC:
 
-* [`SELECT`](sfmc-sql-select): tell the query what data you want to leverage
-* [`FROM`](sfmc-sql-from): tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
-* [`JOIN`](sfmc-sql-join): tell the query how you want to merge data from multiple sources
-* [`WHERE`](sfmc-sql-where): tell the query which part of the above data is interesting to you
+* [`SELECT`](./sfmc-sql-select.mdx): tell the query what data you want to leverage
+* [`FROM`](./sfmc-sql-from.mdx): tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
+* [`JOIN`](./sfmc-sql-join.mdx): tell the query how you want to merge data from multiple sources
+* [`WHERE`](./sfmc-sql-where.mdx): tell the query which part of the above data is interesting to you
 
-However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](sfmc-sql-like)), [String](sfmc-sql-string-functions), [Date](sfmc-sql-date-functions), [Number](sfmc-sql-numeric-functions), [Conversion](sfmc-sql-conversion-functions) Functions and [SFMC System Data Views](sfmc-sql-system-data-views).
+However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](./sfmc-sql-like.mdx)), [String](./sfmc-sql-string-functions.mdx), [Date](./sfmc-sql-date-functions.mdx), [Number](./sfmc-sql-numeric-functions.mdx), [Conversion](./sfmc-sql-conversion-functions.mdx) Functions and [SFMC System Data Views](./sfmc-sql-system-data-views.mdx).
 
 ## Query Studio
 
