--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -11,9 +11,9 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Get a LIKE and build more flexible SQL queries' />
 
-`LIKE` operator allows you to leverage wildcards and groups to search for matching records based on value fragment. You may use it in the [`SELECT CASE`](sfmc-sql-select#like-in-case) and [`WHERE`](sfmc-sql-where) statements.
+`LIKE` operator allows you to leverage wildcards and groups to search for matching records based on value fragment. You may use it in the [`SELECT CASE`](./sfmc-sql-select.mdx#like-in-case) and [`WHERE`](./sfmc-sql-where.mdx) statements.
 
-In [`SELECT`](sfmc-sql-select#like-in-case), think about normalizing and categorizing data. In [`WHERE`](sfmc-sql-where) - about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element of multi picklist (for instance finding one value within the comma-separated list of all purchased products).
+In [`SELECT`](./sfmc-sql-select.mdx#like-in-case), think about normalizing and categorizing data. In [`WHERE`](./sfmc-sql-where.mdx) - about filtering with just a part of the value (for example email domain in `EmailAddress` field) or with a single element of multi picklist (for instance finding one value within the comma-separated list of all purchased products).
 
 There are two levels of `LIKE` usage. First is focused on two essential character wildcards and is very straightforward — the second use full potential of group operator. Let's go through both with practical examples.
 
@@ -56,7 +56,7 @@ In the above example, I used two wildcards - one before and one just after `@` s
 
 In the marketing automation world, however, `LIKE` operator is especially useful for selecting contacts based on the multi picklist columns. Consider `ActiveSubscriptions` field that can have any combination of values `Phone`, `TV`, `Internet`.
 
-Suppose you would like to select all contacts with active phone subscription. In that case, you shouldn't use [equality operator](sfmc-sql-where#equality) (`WHERE ActiveSubscription = 'Phone'`), as it would return only contacts that have just this one subscription. Some of your customers might, however, have multiple (phone and tv or phone and internet plans). For SQL, a field containing `'Phone'` is not equal with the one having a value of `'Phone', Internet'`. `LIKE` operator is here to save the day.
+Suppose you would like to select all contacts with active phone subscription. In that case, you shouldn't use [equality operator](./sfmc-sql-where.mdx#equality) (`WHERE ActiveSubscription = 'Phone'`), as it would return only contacts that have just this one subscription. Some of your customers might, however, have multiple (phone and tv or phone and internet plans). For SQL, a field containing `'Phone'` is not equal with the one having a value of `'Phone', Internet'`. `LIKE` operator is here to save the day.
 
 ```sql {5} title="All subscribers that have at least Phone subscription"
 SELECT
