--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -155,7 +155,7 @@ In the above example, we are doing multiple tests ordered from the easiest to th
 
 ### Pseudo-Ternary
 
-Despite the JavaScript [ternary](/docs/js/js-if-and-switch#ternary) operator is not supported in SSJS, you can leverage shortcircuiting to get the same outcome. If a simple `if` statement has only two possible outcomes depending on a condition, ternary is more straightforward and readable alternative. Based on previous example, instead of:
+Despite the JavaScript [ternary](../js/js-if-and-switch.mdx#ternary) operator is not supported in SSJS, you can leverage shortcircuiting to get the same outcome. If a simple `if` statement has only two possible outcomes depending on a condition, ternary is more straightforward and readable alternative. Based on previous example, instead of:
 
 ```js {2-7} title="Dirty if statement using basic 'if'"
 for (var customer in customers) {
@@ -180,7 +180,7 @@ Instead of 6 lines of code, we have 1. Awesome! But how does it work? The pseudo
 
 :::note You Should Know
 
-You can leverage similar logic to trigger functions or [debugging](/docs/ssjs/debugging-ssjs#debugging-variable):
+You can leverage similar logic to trigger functions or [debugging](./debugging-ssjs#debugging-variable):
 
 ```js title="If isLoggedIn is false, the redirectToLogInPage function will be executed"
 !isLoggedIn && redirectToLogInPage();
