--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -30,7 +30,7 @@ There are four most important elements that you will be using in nearly every qu
 * [`JOIN`](./sfmc-sql-join.mdx): tell the query how you want to merge data from multiple sources
 * [`WHERE`](./sfmc-sql-where.mdx): tell the query which part of the above data is interesting to you
 
-However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](./sfmc-sql-like.mdx)), [String](./sfmc-sql-string-functions.mdx), [Date](./sfmc-sql-date-functions.mdx), [Number](./sfmc-sql-numeric-functions.mdx), [Conversion](./sfmc-sql-conversion-functions.mdx) Functions and [SFMC System Data Views](./sfmc-sql-system-data-views.mdx).
+However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on other SQL Statements ([`LIKE`](./sfmc-sql-like.mdx)), [String](./sfmc-sql-string-functions.mdx), [Date](./sfmc-sql-date-functions.mdx), [Number](./sfmc-sql-numeric-functions.mdx), [Conversion](./sfmc-sql-conversion-functions.mdx) Functions and [SFMC System Data Views](../config/sfmc-config-system-data-views.mdx).
 
 ## Query Studio
 
