--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -30,7 +30,7 @@ SELECT
     [External Contact Id]
 ```
 
-There are also some exceptional cases related to selected [System Data Views](./sfmc-sql-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example when taking Subscriber ID from Enterprise Attributes):
+There are also some exceptional cases related to selected [System Data Views](../config/sfmc-config-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example when taking Subscriber ID from Enterprise Attributes):
 
 ```sql {2} title="There are some special column names with an underscore prefix"
 SELECT
