Fix to query in content

--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -27,7 +27,7 @@ SELECT
     sub.EmailAddress,
     sub.Status,
     j.JourneyName,
-    j.VesionNumber AS JourneyVersion,
+    j.VersionNumber AS JourneyVersion,
     job.EmailName,
     s.EventDate AS SentDate,
     job.DeliveredTime AS DeliveryDate,
